@@ -59,19 +59,23 @@ public class SubmitAppealApplicantSearchHandler implements PreSubmitCallbackHand
         + "Home Office reference number incorrectly. You can contact the appellant to check the reference number"
         + " if you need this information to validate the appeal";
 
-    private static final String HOME_OFFICE_MAIN_APPLICANT_NOT_FOUND_ERROR_MESSAGE = "**Note:** "
-        + "The service was unable to retrieve any appellant details from the Home Office because the Home Office data "
-        + "does not include a main applicant. You can contact the Home Office if you need this information "
-        + "to validate the appeal.\n## Do this next"
+    private static final String HOME_OFFICE_MAIN_APPLICANT_NOT_FOUND_ERROR_MESSAGE = """
+        **Note:** \
+        The service was unable to retrieve any appellant details from the Home Office because the Home Office data \
+        does not include a main applicant. You can contact the Home Office if you need this information \
+        to validate the appeal.
+        ## Do this next"""
         + "\r\n- Contact the Home Office to get the correct details"
         + "\r\n- Use [Edit appeal](/case/IA/Asylum/${[CASE_REFERENCE]}/trigger/editAppealAfterSubmit) to update "
         + "the details as required\r\n- [Request Home Office data](/case/IA/Asylum/${[CASE_REFERENCE]}"
         + "/trigger/requestHomeOfficeData) to match the appellant details with the Home Office details";
 
-    private static final String HOME_OFFICE_WRONG_APPLICANT_NOT_FOUND_ERROR_MESSAGE = "**Note:** "
-            + "The service has been unable to retrieve the Home Office information about this appeal "
-            + "because the Home Office Reference/Case ID, data of birth or name submitted by the appellant do not "
-            + "match the details stored by the Home Office\n## Do this next"
+    private static final String HOME_OFFICE_WRONG_APPLICANT_NOT_FOUND_ERROR_MESSAGE = """
+            **Note:** \
+            The service has been unable to retrieve the Home Office information about this appeal \
+            because the Home Office Reference/Case ID, data of birth or name submitted by the appellant do not \
+            match the details stored by the Home Office
+            ## Do this next"""
             + "\r\n- Contact the Home Office to get the correct details"
             + "\r\n- Use [Edit appeal](/case/IA/Asylum/${[CASE_REFERENCE]}/trigger/editAppealAfterSubmit) to update "
             + "the details as required"
@@ -155,9 +159,9 @@ public class SubmitAppealApplicantSearchHandler implements PreSubmitCallbackHand
 
             if (searchResponse != null) {
                 if (searchResponse.getErrorDetail() != null) {
-                    final String errMessage = String.format("Error code: %s, message: %s",
-                            searchResponse.getErrorDetail().getErrorCode(),
-                            searchResponse.getErrorDetail().getMessageText());
+                    final String errMessage = "Error code: %s, message: %s".formatted(
+                        searchResponse.getErrorDetail().getErrorCode(),
+                        searchResponse.getErrorDetail().getMessageText());
                     homeOfficeDataErrorsHelper.setErrorMessageForErrorCode(
                             caseId,
                             asylumCase,
@@ -178,7 +182,7 @@ public class SubmitAppealApplicantSearchHandler implements PreSubmitCallbackHand
                 Optional<HomeOfficeCaseStatus> selectedApplicant =
                         selectAnyApplicant(caseId, searchResponse.getStatus());
 
-                if (!selectedApplicant.isPresent()) {
+                if (selectedApplicant.isEmpty()) {
                     log.warn("Unable to find Any APPLICANT in Home office response, caseId: {}", caseId);
                     asylumCase.write(HOME_OFFICE_SEARCH_STATUS, "FAIL");
                     asylumCase.write(HOME_OFFICE_SEARCH_STATUS_MESSAGE,
